risolti i problemi con i mapper e aggiunto findUserById in PaymentService